Forget Password page.

--- a/Inventory_App/Views/Auth/Login.cshtml
+++ b/Inventory_App/Views/Auth/Login.cshtml
@@ -11,7 +11,7 @@
             <h4 style="text-align: center">Have an account?</h4>
             <div class="mb-3">
                 <label for="userNameText" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="userNameText" aria-describedby="emailHelp" name="userNameText">
+                <input type="text" class="form-control" id="userNameText" aria-describedby="emailHelp" name="userNameText">
             </div>
             <div class="mb-3">
                 <label for="passwordText" class="form-label">Password</label>
