--- a/Inventory_App/Views/Shared/_Layout.cshtml
+++ b/Inventory_App/Views/Shared/_Layout.cshtml
@@ -6,6 +6,20 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @{ 
+        string existingUserName = "";
+        if (Session["UserName"] != null && !string.IsNullOrEmpty(Session["UserName"].ToString()))
+        {
+            existingUserName = Session["UserName"].ToString();
+        }
+    }
+
+    <script>
+        let existingUserName = '@existingUserName';
+        if (existingUserName == '') {
+            window.location.href = '@Url.Action("Login", "Auth")';
+        }
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
@@ -20,6 +34,18 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    @{
+                        if (existingUserName != "")
+                        {
+                            <li>@Html.ActionLink("Logout", "Logout", "Auth", new { area = "" }, new { @class = "nav-link" })</li>
+
+                        }
+                        else
+                        {
+                            <li>@Html.ActionLink("Login", "Login", "Auth", new { area = "" }, new { @class = "nav-link" })</li>
+                        }
+                    }
                 </ul>
             </div>
         </div>
