--- a/Inventory_App/Views/Shared/_Layout.cshtml
+++ b/Inventory_App/Views/Shared/_Layout.cshtml
@@ -4,48 +4,75 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+
+    @Scripts.Render("~/bundles/jquery")
+    <script src="~/Scripts/JqueryUI/jquery-ui.js"></script>
+    <link href="~/Scripts/JqueryUI/jquery-ui.css" rel="stylesheet" />
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @{ 
-        string existingUserName = "";
-        if (Session["UserName"] != null && !string.IsNullOrEmpty(Session["UserName"].ToString()))
+
+    @{
+        string ExistUserName = "";
+        if (Session["UserName"] != null)
         {
-            existingUserName = Session["UserName"].ToString();
+            string SessionData = Session["UserName"].ToString();
+            if (!String.IsNullOrEmpty(SessionData))
+            {
+                ExistUserName = Session["UserName"].ToString();
+            }
         }
     }
-
     <script>
-        let existingUserName = '@existingUserName';
-        if (existingUserName == '') {
+        var ExistUserName = '@ExistUserName';
+        if (ExistUserName == "") {
             window.location.href = '@Url.Action("Login", "Auth")';
         }
+        else
+        {
+            sessionStorage.setItem("SesssionData", ExistUserName);
+        }
+        function DoLogout() {
+            window.location.href = '@Url.Action("Logout", "Auth")';
+        }
+
+        $(document).ready(function () {
+            $('body').find('.clsDateTime').each(function () {
+                $(this).datepicker({
+                    dateFormat: 'dd/mm/yy' 
+                });
+            })
+        })
+        
     </script>
+    <style>
+        #ui-datepicker-div {
+            z-index:10001 !important;
+        }
+    </style>
 </head>
 <body>
+     
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Inventory Application", "Dashboard", "Inventory", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Dashboard", "Dashboard", "Inventory", new { area = "" }, new { @class = "nav-link" })</li>
                     @{
-                        if (existingUserName != "")
+                        if (ExistUserName != "")
                         {
-                            <li>@Html.ActionLink("Logout", "Logout", "Auth", new { area = "" }, new { @class = "nav-link" })</li>
+                            <li class="nav-link" style="cursor:pointer" onclick="DoLogout()">Logout @ExistUserName</li>
+                            @*<form method="post" action="@Url.Action("DoLogout","Auth")">
 
-                        }
-                        else
-                        {
-                            <li>@Html.ActionLink("Login", "Login", "Auth", new { area = "" }, new { @class = "nav-link" })</li>
+                                </form>*@
                         }
                     }
+
                 </ul>
             </div>
         </div>
@@ -58,8 +85,23 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @{
+        string SessionMessage = "";
+        if (Session["Message"] == null)
+        {
+            Session["Message"] = "";
+        }
+        SessionMessage = Session["Message"].ToString();
+        Session["Message"] = "";
+    }
+    <script>
+        var bodyMessage = '@SessionMessage';
+        if (bodyMessage != '') {
+            alert(bodyMessage);
+            bodyMessage = '';
+        }
+    </script>
+    @* @Scripts.Render("~/bundles/bootstrap")*@
     @RenderSection("scripts", required: false)
 </body>
 </html>
