--- a/Inventory_App/Views/Inventory/Dashboard.cshtml
+++ b/Inventory_App/Views/Inventory/Dashboard.cshtml
@@ -45,7 +45,10 @@
     }
 </style>
 @{
-    
+    <div>
+        <a class="btn btn-sm btn-primary" href="@Url.Action("RegisterCustomer","Inventory")">Register New Customer</a>
+    </div>
+    <br />
     <div class="row">
         <div class="col col-sm-6">
             @Html.Partial("~/Views/Inventory/_PartialEquipmentList.cshtml")
